# psyho

./: .env.example  CLAUDE.md  README.md  docker-compose.yml
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  alembic.ini  pyproject.toml  start.sh
backend/alembic/: env.py
backend/alembic/versions/: 001_initial.py  002_memory_and_continuation.py  003_add_pop_score.py  004_otp_auth_and_profile.py  005_telegram_auth.py  006_telegram_otp.py  007_new_features.py  008_test_results.py  009_memory_hash.py  010_drop_email_verification_codes.py
backend/app/: config.py  database.py  main.py
backend/app/agents/: act.py  base.py  cbt.py  ifs.py  jungian.py  narrative.py  orchestrator.py  somatic.py
backend/app/agents/prompts/: act.txt  cbt.txt  ifs.txt  jungian.txt  narrative.txt  orchestrator.txt  somatic.txt
backend/app/middleware/: admin.py  auth.py
backend/app/models/: __init__.py  models.py
backend/app/routers/: achievements.py  actions.py  admin.py  auth.py  capsules.py  diary.py  export.py  insights.py  messages.py  mood.py  personality.py  sessions.py  tasks.py  tests.py  users.py
backend/app/schemas/: __init__.py  auth.py  message.py  session.py  user.py
backend/app/services/: achievement_service.py  action_service.py  ai_provider.py  auth.py  context.py  diary_service.py  email_service.py  memory_service.py  personality_service.py  telegram_bot.py
docs/: AI-Психолог — Детальный дизайн-документ.html  AMENDMENTS.md  AUDIT.md  Improvements1.md  PLAN.md  REVIEW.md  audit2.md  development_plan_v2.md  imp3.md  imp4.md  improvement_plan.md  tg.md  (+4 more)
(+86 files in other folders)
